Fix scrollbar issue in canvas

--- a/silzila-frontend/src/Components/DataSet/Dataset.css
+++ b/silzila-frontend/src/Components/DataSet/Dataset.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   background-color: white;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .canvasStyle {
@@ -15,7 +16,7 @@
   height: 100%;
   flex-wrap: wrap;
   border-top: 2px solid rgba(224, 224, 224, 1);
-  width: calc(99% - 15vw);
+  /* width: calc(99% - 15vw); */
 }
 
 .draggableBox {
